src/assets/style/main.scss
@import url('https://s1.hdslb.com/bfs/static/jinkela/long/font/regular.css');
* {
    font-family: HarmonyOS_Regular, Helvetica Neue, Microsoft YaHei, sans-serif;
}

body {
    color: var(--lew-text-color-1);
    background-color: var(--lew-bgcolor-4);
    overflow: hidden;
    font-size: 14px;
}

:root {
    --lew-siderbar-width: 300px;
}

// * {
//     font-family: 'Noto Sans SC';
// }
a {
    color: var(--lew-text-color-2);
}

pre code.hljs::-webkit-scrollbar {
    background-color: rgb(126, 126, 126, 0);
    width: 5px;
    height: 5px;
}

pre code.hljs::-webkit-scrollbar-thumb:hover {
    background-color: rgb(126, 126, 126);
}

pre code.hljs::-webkit-scrollbar-thumb {
    background-color: rgb(209 213 219 / 0);
    opacity: 0;
    border-radius: 5px;
}

pre code.hljs:hover::-webkit-scrollbar-thumb {
    background-color: rgb(209 213 219 / 0.3);
    opacity: 1;
    border-radius: 5px;
}

.sub-title {
    font-size: 14px;
    color: var(--lew-text-color-6);
    font-weight: 400;
    line-height: 30px;
}

.demo-tips {
    font-size: 14px;
    color: var(--lew-text-color-6);
    font-weight: 400;
    margin: 20px 0px;
}

.guide-wrapper {
    p {
        line-height: 30px;
        font-size: 14px;
        margin: 10px 0px 20px 0px;
        color: var(--lew-text-color-5);
    }
    .pre-box {
        margin-top: 10px;
        code {
            border-radius: var(--lew-border-radius);
            overflow: hidden;
        }
    }
}

